--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,5 @@
 .side-bar {
   width: 218px;
-  height: 995px;
-  flex-shrink: 0;
-}
-button {
-  width: 158px;
-  height: 57.76px;
   flex-shrink: 0;
 }
 .board {
@@ -17,15 +11,11 @@ button {
   display: flex;
   width: 100%;
 }
-.chart-container {
-  width: 100%;
-}
 .all-summary {
   margin-top: 50px;
-  background-color: azure;
 }
 .summary {
   padding: 20px;
-  background-color: aquamarine;
+  background-color: white;
   width: 50%;
 }
